m/k/k3d-dfd-netdata/resource-ingress-netdata.yaml
#ManagedBy: cue

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netdata
  annotations:
    external-dns.alpha.kubernetes.io/hostname: netdata.dev.amanihavam.defn.run
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: netdata.dev.amanihavam.defn.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netdata
                port:
                  number: 19999
